# voxel-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
src/: main.rs
src/engine/: debug_overlay.rs  imgui_overlay.rs  macros.rs  mod.rs  starter.rs  timing.rs  util.rs  vector_utils.rs
src/engine/new/: chunk.rs  chunk_data.rs  chunk_manager.rs  location.rs  meshing.rs  mod.rs  worldgen.rs
src/engine/new/meshing/: direction.rs  quad.rs
src/engine/rendering/: camera.rs  mod.rs  texture.rs
src/engine/world/: chunk.rs  chunk_data.rs  chunk_manager.rs  gen.rs  location.rs  mesh.rs  meshing.rs  mod.rs  quad.rs  shader.wgsl  voxel.rs  voxel_data.rs  worldgen.rs
src/engine/world/chunk/: data.rs  direction.rs  local_coordinates.rs  local_location.rs  meshing.rs  mod.rs  renderer.rs  voxel_face.rs
src/engine/world/core/: mod.rs
src/engine/world/generation/: mod.rs
src/engine/world/mesh/: mod.rs  renderer.rs  shader.wgsl
src/engine/world/meshing/: direction.rs  quad.rs
voxel/: Cargo.toml
voxel-game/: Cargo.toml
voxel-game/src/: main.rs
voxel/benches/: noise_benchmark.rs
voxel/src/: debug_overlay.rs  frame_timer.rs  lib.rs  macros.rs  starter.rs  timing.rs  windowing.rs
voxel/src/renderer/: camera.rs  mod.rs
voxel/src/rendering/: camera.rs  mod.rs
voxel/src/world/: awesome_queue.rs  chunk.rs  chunk_data.rs  chunk_manager.rs  chunk_renderer.rs  chunk_storage.rs  location.rs  mesh.rs  meshing.rs  mod.rs  shader.wgsl  voxel_data.rs  worldgen.rs
voxel/src/world/chunk_renderer/: meshing.rs  vertex.rs
voxel/src/world/chunk_renderer/meshing/: quad.rs
voxel/src/world/meshing/: quad.rs
