[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
wgpu = "0.16.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"

pollster = "0.3.0"

anyhow = "1.0.70"

log = "0.4.17"
env_logger = "0.10.0"
fastrand = "1.9.0"
timing = "0.2.3"
itertools = "0.10.5"

strum = "0.24.1"
strum_macros = "0.24.3"

noise = "0.8.2"

[profile.release]
# enable debug for profiling
debug = true
