[package]
name = "voxel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30"
wgpu = "25"
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = { git = "https://github.com/rustgd/cgmath.git", features = [
    "bytemuck",
] }
pollster = "0.4"
anyhow = "1"
log = "0.4"
fastrand = "2"
timing = "0.2"
itertools = "0.14"
strum = "0.27"
strum_macros = "0.27"
noise = "0.9"
static_assertions = "1"

# do this until egui v0.32 is out
egui = { git = "https://github.com/emilk/egui", rev = "7ac137bfc167d0f7ff78d5fd042d6042ff190455" }
egui-wgpu = { git = "https://github.com/emilk/egui", rev = "7ac137bfc167d0f7ff78d5fd042d6042ff190455" }
egui-winit = { git = "https://github.com/emilk/egui", rev = "7ac137bfc167d0f7ff78d5fd042d6042ff190455" }
rayon = "1"
hashbrown = "0.15"
lazy_static = "1"
enum-map = "2"
ahash = "0.8"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
bracket-noise = "0.8"
lazy_static = "1"
simdnoise = "3"
voxel = "0.1"

[[bench]]
name = "noise_benchmark"
harness = false

#[patch.crates-io]
## instead of suppressing the wgpu_hal::vulkan::instance logging module, we could also use the newest version of wgpu and egui (egui also depends on wgpu)
#wgpu = { git = "https://github.com/gfx-rs/wgpu.git" }
#egui = { git = "https://github.com/emilk/egui.git" }
#egui-winit = { git = "https://github.com/emilk/egui.git", package = "egui-winit" }
#egui-wgpu = { git = "https://github.com/emilk/egui.git", package = "egui-wgpu" }
